--- a/src/assets/CSS/Styles.scss
+++ b/src/assets/CSS/Styles.scss
@@ -1,6 +1,8 @@
 :root {
-  --Pri: #91972a;
+  --Pri: rgb(87, 223, 87);
+  --Ter: lightgreen;
   --Sec: #198754;
+  --name : #0d6efd;
 }
 * {
   margin: 0;
